# trustbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: CaseExplorer.tsx  Dashboard.tsx  globals.css  layout.tsx  page.tsx
dashboard/data/: sample-regression.json  sample-run-v2.json  sample-run.json
dashboard/lib/: aggregate.ts  citations.ts  data.ts
data/golden/: v1.jsonl
docs/: RUN_LIVE.md  phase1-ownership.md
docs/outreach/: application-note.md
docs/playbook/: onboarding-playbook.md  roi-writeup.md
docs/superpowers/plans/: 2026-06-04-trustbench-phase1-agent.md
docs/superpowers/specs/: 2026-06-04-trustbench-design.md
scripts/: make_sample_dashboard_data.py  run_live_groq.py
src/trustbench/: config.py
src/trustbench/agent/: prompts.py  support_agent.py  trace.py
src/trustbench/cli/: compare_runs.py  harvest.py  run_eval.py  run_ticket.py
src/trustbench/evals/: calibration.py  failure_taxonomy.py  flywheel.py  golden.py  groq_judge.py  judge.py  regression.py  report.py  root_cause.py  runner.py
src/trustbench/llm/: base.py  fakes.py  gemini_client.py  groq_client.py  types.py
src/trustbench/retrieval/: index.py  (+3 more)
tests/: conftest.py  test_agent.py  test_calibration.py  test_deterministic_metrics.py  test_failure_taxonomy.py  test_flywheel.py  test_golden.py  test_groq_adapters.py  test_judge_metrics.py  test_regression.py  test_retrieval.py  test_root_cause.py  test_runner.py  test_tools.py  test_trace.py
(+10 files in other folders)
