[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustbench"
version = "0.1.0"
description = "A production-readiness harness for AI support agents"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "numpy>=1.26",
    "openai>=1.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/trustbench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
